[gd_scene load_steps=4 format=3 uid="uid://vor5lmwpcy24"]

[ext_resource type="Script" uid="uid://23ptdpnq7f07" path="res://scripts/Game.gd" id="1_cpr0p"]
[ext_resource type="Texture2D" uid="uid://dpuvtdf0agb0g" path="res://assets/arrow.png" id="1_qbsmt"]
[ext_resource type="Texture2D" uid="uid://p8ot0cybr11r" path="res://assets/bomb.png" id="2_cpr0p"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cpr0p")

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(537.5, 328)
scale = Vector2(2.40625, 1)
texture = ExtResource("1_qbsmt")

[node name="Bomb" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 515.0
offset_top = 302.0
offset_right = 555.0
offset_bottom = 342.0
texture = ExtResource("2_cpr0p")

[node name="Timer" type="Timer" parent="."]

[node name="PlayersContainer" type="Node2D" parent="."]
position = Vector2(535, 326)

[node name="MinigameContainer" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TurnButton" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.5
offset_top = -75.0
offset_right = 90.5
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "PLAY TURN"

[node name="Time" type="Label" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -44.0
offset_right = 40.0
offset_bottom = 44.0
grow_vertical = 2
theme_override_font_sizes/font_size = 32

[node name="PlayerLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -44.0
offset_bottom = 44.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/TurnButton" to="." method="_on_turn_button_pressed"]
